@@ -380,7 +380,7 @@
       <component name="epiphany" dir="epiphany" group="desktop">
 	<podir dir="po"/>
 	<potname name="epiphany.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-10"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -628,7 +628,7 @@
       <component name="gcalctool" dir="gcalctool" group="desktop">
 	<podir dir="po"/>
 	<potname name="gcalctool.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-10"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -1543,7 +1543,7 @@
       <component name="gnome-themes" dir="gnome-themes" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-themes.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
@@ -1585,7 +1585,7 @@
       <component name="gnome-utils" dir="gnome-utils" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-utils-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
@@ -1656,7 +1656,7 @@
       <component name="gnomemeeting" dir="gnomemeeting" group="desktop">
         <podir dir="po"/>
         <potname name="gnomemeeting.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
@@ -2760,6 +2760,17 @@
       </component>
     </version>
   </module>
+  <module name="silky">
+    <version release="HEAD">
+      <component name="silky" dir="silky" group="extras">
+			  <podir dir="po"/>
+			  <potname name="silky.pot"/>
+			  <branch name="HEAD"/>
+			  <regenerate/>
+			  <download/>
+      </component>
+    </version>
+  </module>
   <module name="system-tools-backends">
     <version release="gnome-2.8">
       <component name="system-tools-backends" dir="system-tools-backends" group="desktop">
@@ -2931,7 +2942,7 @@
       <component name="zenity" dir="zenity" group="desktop">
         <podir dir="po"/>
         <potname name="zenity-0.1.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
