@@ -1,3 +1,9 @@
+2005-03-07  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added silky to extras.
+	epiphany, gcalctool, gnome-utils, gnomemeeting,
+	gnome-themes, and zenity have been branched.
+
 2005-03-07  Christian Persch  <chpe@cvs.gnome.org>
 
 	* translation-status.xml: Epiphany Extensions HEAD is
